<resources>
    <string name="app_name">GamiFit</string>
    <string name="btn_create_gym">Criar academia</string>
    <string name="select_gym_location">Selecionar Localização</string>
    <string name="btn_convidar">Convidar</string>
    <string name="user_img">User image profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="account_created_successfully">Conta criada com sucesso</string>
    <string name="selected_location">Localização selecionada</string>
    <string name="map_instructions_alert_dialog_title">Instruções</string>
    <string name="map_instructions_alert_dialog_message">Toque no local do mapa em que sua academia está localizada</string>
    <string name="marker_alert_dialog_title">Este é o local exato de sua academia?</string>
    <string name="option_get_place">Get place</string>
    <string name="title_activity_gym">GymActivity</string>
    <string name="title_trainings">Treinamento</string>
    <string name="title_social">Social</string>
    <string name="title_accompaniment">Acompanhamento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Entrar</string>

    <string name="facebook_app_id">2074348169266319</string>
    <string name="fb_login_protocol_scheme">fb2074348169266319</string>
    <string name="btn_signup">Criar uma conta</string>

    <string name="email_field_hint">Digite seu email</string>
    <string name="password_field_hint">Digite sua senha</string>
    <string name="name_field_hint">Digite seu nome</string>
    <string name="gym_name_field_hint">Nome da academia</string>
    <string name="create_account_field">Criar conta</string>
    <string name="already_have_account">Já tem uma conta?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="action_invite_qrcode_gym">Convidar</string>
    <string name="action_gym_qrcode">Meu QRCode</string>
    <string name="action_checkin_checkout">Check in/Check out</string>

    <string name="action_search">Procurar</string>

    <string name="feed">Postagens</string>
    <string name="users">Usuários</string>
    <string name="action_invite">Convites</string>
    <string name="notifications_activity">Convites</string>
    <string name="my_gym_activity">Minhas Academias</string>
    <string name="create_gym_activity">Cadastrar Academia</string>

    <string name="qrcode_text">"Escaneie o código de um usuário"</string>
    <string name="qrcode_invite_title">"Convidar usuário"</string>
    <string name="qrcode_invite_message">"Enviar convite para este usuário?"</string>
    <string name="accept">Aceitar</string>
    <string name="reject">Rejeitar</string>
    <string name="my_qrcode">Meu Código</string>
    <string name="user_code">Código de usuário</string>
    <string name="close">Fechar</string>
    <string name="alert_dialog_yes">Sim</string>
    <string name="alert_dialog_no">Não</string>

    <string name="follow_user">Seguir</string>
    <string name="title_activity_gym_profile">GymProfileActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_selected_place">Endereço</string>

    <string name="action_my_gyms">Minhas academias</string>
    <string name="title_activity_my_gym">MyGymActivity</string>

    <string name="offensive_days">Ofensiva:</string>

    <string name="less_than_forty_minutes_training_exception_message">Você ainda não atingiu sua meta, vamos lá!</string>

    <string name="operation_failed">Não foi possível completar a operação</string>
    <string name="create_gym_profile_sucess_part1">Perfil criado na academia </string>
    <string name="create_gym_profile_sucess_part2"> criado com sucesso</string>
    <string name="unexpected_error_message">Um erro inesperado ocorreu</string>
    <string name="gym_created_sucessfully">Academia criada com sucesso</string>
    <string name="gym_created_not_sucessfully">Não foi possível cadastrar esta academia</string>

    <string name="checkin_checkout_scan_prompt">Check in / Check out</string>
    <string name="successful_checkin">Check in efetuado com sucesso</string>
    <string name="successful_checkout">Check out efetuado com sucesso</string>

    <string name="invalid_email_message">Verifique seu email e tente novamente</string>
    <string name="invalid_password_message">Verifique sua senha e tente novamente</string>
    <string name="connection_error">Um erro de conexão aconteceu, por favor tente mais tarde</string>
    <string name="user_or_password_incorrect">Usuário ou senha incorretos</string>
    <string name="was_not_possible_to_log_in">Não foi possivel realizar login</string>

    <string name="send_invite_to_user_scan_prompt">Enviar convite</string>
    <string name="invite_sent_succesfully">Convite enviado com sucesso</string>
    <string name="invite_sent_unsuccesfully">Este convite não pôde ser enviado</string>
    <string name="scanned_code_not_equals_to_gym_code">Este código não se refere a esta academia</string>
    <string name="exercising_for_less_than_forty_minutes">Você não completou a meta de 40 minutos diários</string>
    <string name="trying_to_checkin_twice_a_day">Não é possível fazer check in duas vezes no mesmo dia</string>
    <string name="could_not_retrieve_user_location">Não foi possível obter sua localização</string>
    <string name="user_is_far_away_from_gym">Você está longe da academia, chegue mais perto</string>
    <string name="required_permission_was_not_granted">É necessário permitir acesso a sua lozalização para fazer check in ou check out</string>
    <string name="try_to_checkin_checkout_again">Agora você pode fazer check in/check out, tente novamente</string>

    <string name="passwords_are_not_the_same">Senhas não coincidem</string>
    <string name="weak_password">Senha fraca, tente utilizar mais caracteres</string>
    <string name="invalid_email">Email inválido</string>
    <string name="user_account_with_this_email_already_exists">Já existe um usuário cadastrado com este email</string>
    <string name="unexpected_problem">Um erro aconteceu, verifique sua conexão de internet</string>
    <string name="database_is_off">Base de dados inacessível</string>
</resources>
