<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_checkin_checkout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_barcode_2"
        android:title="@string/action_checkin_checkout"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_offensive_days"
        android:icon="@drawable/offensive_days_count"
        android:title="@string/offensive_days"
        android:orderInCategory="400"
        app:showAsAction="always"/>


</menu>
